<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="4dp"
    android:paddingRight="8dp"
    android:paddingLeft="8dp">

    <TextView
        android:textAlignment="center"
        android:background="@color/fragAccountBanner"
        android:id="@+id/frag_purchase_accountBanner"
        android:text="MAIN DEBIT FBFCU"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <Button
            android:id="@+id/frag_purchase_clearButton"
            style="@android:style/Widget.Material.Light.Button.Inset"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="RESET"
            android:textSize="16sp" />

        <Button
            android:id="@+id/frag_purchase_saveButton"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="SAVE"
            android:textSize="16sp"
            />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/fab_margin"
     >




        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_toLeftOf="@id/frag_purchase_sticky_switch"
            android:paddingBottom="@dimen/fab_margin"
            android:paddingRight="6dp">

            <android.support.design.widget.TextInputEditText
                android:inputType="numberDecimal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/frag_purchase_amountET"
                android:hint="Amount" />


        </android.support.design.widget.TextInputLayout>

    <io.ghyeok.stickyswitch.widget.StickySwitch
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:id="@+id/frag_purchase_sticky_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:ss_animationDuration="900"
        app:ss_iconSize="15dp"
        app:ss_leftIcon="@drawable/ic_remove_black_24dp"
        app:ss_leftText="Withdrawal"
        app:ss_rightIcon="@drawable/ic_add_black_24dp"
        app:ss_rightText="Deposit"
        app:ss_selectedTextSize="10sp"
        app:ss_sliderBackgroundColor="@color/colorPrimaryDark"
        app:ss_switchColor="@color/colorAccent"
        app:ss_textColor="@color/textColorPrimary"
        app:ss_textSize="8sp"
        app:ss_animationType="line"/>


    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


<android.support.v7.widget.CardView
    android:layout_marginBottom="8dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
        <RelativeLayout
            android:paddingLeft="4dp"
            android:background="@color/fragCardTransOptions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp">

            <LinearLayout
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/fragpurchasemain"
           />

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/frag_purchase_mainLabelTV"

                    android:focusable="true"/>

            </LinearLayout>
            <ImageView
                android:padding="6dp"
                android:id="@+id/frag_purchase_iv_edit_main_label"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_centerInParent="true"
                android:src="@drawable/ic_mode_edit_black_24dp"
                android:tint="@color/colorPrimaryDark"
                android:layout_toLeftOf="@id/frag_purchase_iv_add_main_label"/>

            <ImageView
                android:padding="6dp"
                android:id="@+id/frag_purchase_iv_pick_main_label"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_centerInParent="true"
               android:src="@drawable/ic_view_list_black_24dp"
                android:tint="@color/colorPrimaryDark"
                android:layout_toLeftOf="@+id/frag_purchase_iv_edit_main_label"/>
            <ImageView
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:padding="6dp"
                android:layout_centerInParent="true"
                android:id="@+id/frag_purchase_iv_add_main_label"
                android:layout_width="50dp"
                android:layout_height="50dp"
               android:src="@drawable/ic_add_circle_black_24dp"
                android:tint="@color/colorPrimaryDark"/>


        </RelativeLayout>

</android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_marginBottom="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <RelativeLayout
                android:background="@color/fragCardTransOptions"
                android:paddingLeft="4dp"
                android:paddingBottom="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fragpurchasesub"
                        android:focusable="true"/>

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/frag_purchase_subLabelTV"
                    android:text=""
                    android:focusable="true"/>
                </LinearLayout>
                <ImageView
                    android:padding="6dp"
                    android:layout_centerInParent="true"
                    android:id="@+id/frag_purchase_iv_edit_sub_label"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/ic_mode_edit_black_24dp"
                    android:tint="@color/colorPrimaryDark"
                    android:layout_toLeftOf="@id/frag_purchase_iv_add_sub_label"/>
                <ImageView
                    android:layout_centerInParent="true"
                    android:padding="6dp"
                    android:id="@+id/frag_purchase_iv_pick_sub_label"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                   android:src="@drawable/ic_view_list_black_24dp"
                    android:tint="@color/colorPrimaryDark"
                    android:layout_toLeftOf="@id/frag_purchase_iv_edit_sub_label"/>
                <ImageView
                    android:layout_centerInParent="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:padding="6dp"
                    android:id="@+id/frag_purchase_iv_add_sub_label"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                   android:src="@drawable/ic_add_circle_black_24dp"
                    android:tint="@color/colorPrimaryDark"/>


            </RelativeLayout>
            </android.support.v7.widget.CardView>
<!--
<android.support.v7.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    >
            <RelativeLayout
                android:background="@color/fragCardTransOptions"
                android:paddingLeft="4dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                    android:paddingBottom="8dp">

                <LinearLayout
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fragpurchasecrossref"
                    android:focusable="true"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/frag_purchase_cross_ref_TV"
                    android:focusable="true"/>

                </LinearLayout>

                <ImageView
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:padding="8dp"
                    android:id="@+id/frag_purchase_iv_link"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                   android:src="@drawable/ic_link_black_24dp"
                    android:tint="@color/colorPrimaryDark"/>

            </RelativeLayout>

</android.support.v7.widget.CardView>
-->
            <android.support.v7.widget.CardView
                android:layout_marginBottom="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <RelativeLayout
                android:paddingLeft="4dp"
                android:background="@color/fragCardTransOptions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="8dp">


                <LinearLayout
                    android:layout_toLeftOf="@id/frag_purchase_iv_additionalInfo"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/fragpurchaseadditionalinfo"
                    android:focusable="true"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/frag_purchase_additional_info_tv"

                        android:focusable="true"/>
                </LinearLayout>

                <ImageView
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:padding="6dp"
                    android:id="@+id/frag_purchase_iv_additionalInfo"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_centerInParent="true"
                   android:src="@drawable/ic_add_circle_black_24dp"
                    android:tint="@color/colorPrimaryDark"/>

            </RelativeLayout>
            </android.support.v7.widget.CardView>


    <android.support.v7.widget.CardView
        android:layout_marginBottom="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/frag_purchase_cash_card">

        <RelativeLayout
            android:paddingLeft="4dp"
            android:background="@color/fragCardTransOptions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="8dp">


            <LinearLayout
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/fragpurchasefromcash"
                    android:focusable="true"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/frag_purchase_from_cash"
                    android:focusable="true"/>
            </LinearLayout>
            <ImageView
             android:layout_toLeftOf="@id/frag_purchase_checkbox"
                android:padding="6dp"

                android:id="@+id/frag_purchase_iv_infocash"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_info_black_24dp"
                android:tint="#000000"/>

            <android.support.v7.widget.AppCompatCheckBox
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:padding="5dp"
                android:id="@+id/frag_purchase_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:tint="@color/colorPrimaryDark"/>

        </RelativeLayout>
    </android.support.v7.widget.CardView>

        </LinearLayout>
    </ScrollView>
</LinearLayout>